--- a/domoticaPI.css
+++ b/domoticaPI.css
@@ -1,5 +1,5 @@
 /* 
-    CSS Projeto DOMÓTICA
+    CSS Projeto DOMÃ“TICA
     Projeto Integrador
 */
 
@@ -34,7 +34,7 @@ div.rele1_ligado {
     height: 206px;
     border: none;
 		margin:auto;
-    background: url(https://www.dropbox.com/s/8ge2frfm9j4p2h4/lampada_ligada.png) no-repeat left top;
+    background: url(https://raw.githubusercontent.com/fabiooliver1981/teste/master/lampada_ligada.png) no-repeat left top;
 }
 
 div.rele1_desligado {
@@ -44,7 +44,7 @@ div.rele1_desligado {
     width: 300px;
     height: 206px;
     border: none;
-	background: url(https://www.dropbox.com/s/4wy94ceoc0jwr2i/lampada_desligada.png) no-repeat left top;
+	background: url(https://raw.githubusercontent.com/fabiooliver1981/teste/master/lampada_desligada.png) no-repeat left top;
 }
 
 div.rele2_ligado {
@@ -54,7 +54,7 @@ div.rele2_ligado {
     width: 300px;
     height: 206px;
     border: none;
-    background: url(https://www.dropbox.com/s/8ge2frfm9j4p2h4/lampada_ligada.png) no-repeat left top;
+    background: url(https://raw.githubusercontent.com/fabiooliver1981/teste/master/lampada_ligada.png) no-repeat left top;
 }
 
 div.rele2_desligado {
@@ -64,7 +64,7 @@ div.rele2_desligado {
     width: 300px;
     height: 206px;
     border: none;
-	background: url(https://www.dropbox.com/s/4wy94ceoc0jwr2i/lampada_desligada.png) no-repeat left top;
+	background: url(https://raw.githubusercontent.com/fabiooliver1981/teste/master/lampada_desligada.png) no-repeat left top;
 }
 
 div.rele3_ligado {
@@ -74,7 +74,7 @@ div.rele3_ligado {
     width: 300px;
     height: 206px;
     border: none;
-    background: url(https://www.dropbox.com/s/8ge2frfm9j4p2h4/lampada_ligada.png) no-repeat left top;
+    background: url(https://raw.githubusercontent.com/fabiooliver1981/teste/master/lampada_ligada.png) no-repeat left top;
 }
 
 div.rele3_desligado {
@@ -84,7 +84,7 @@ div.rele3_desligado {
     width: 300px;
     height: 206px;
     border: none;
-	background: url(https://www.dropbox.com/s/4wy94ceoc0jwr2i/lampada_desligada.png) no-repeat left top;
+	background: url(https://raw.githubusercontent.com/fabiooliver1981/teste/master/lampada_desligada.png) no-repeat left top;
 }
 
 div.rele4_ligado {
@@ -94,7 +94,7 @@ div.rele4_ligado {
     width: 300px;
     height: 206px;
     border: none;
-    background: url(https://www.dropbox.com/s/8ge2frfm9j4p2h4/lampada_ligada.png) no-repeat left top;
+    background: url(https://raw.githubusercontent.com/fabiooliver1981/teste/master/lampada_ligada.png) no-repeat left top;
 }
 
 div.rele4_desligado {
@@ -104,7 +104,7 @@ div.rele4_desligado {
     width: 300px;
     height: 206px;
     border: none;
-	background: url(https://www.dropbox.com/s/4wy94ceoc0jwr2i/lampada_desligada.png) no-repeat left top;
+	background: url(https://raw.githubusercontent.com/fabiooliver1981/teste/master/lampada_desligada.png) no-repeat left top;
 }
 
 #div1 {
